[package]
name = "gol-async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
futures = "0.3.14"
gol-lib = { path = "../lib" }
itertools = "0.10.1"
num_cpus = "1.13.0"
tokio = { version = "1.10.0", features = ["full"] }
