[package]
name = "gol-conc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-deque = "0.8.1"
gol-lib = { path = "../lib" }
num_cpus = "1.13.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false